# skepu

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  Jenkinsfile  LICENSE.txt  Makefile  PKG_README.in  README.md  README_INTERNAL.md  clang_patch.patch  llvm.patch
CMake/: SkePUConfig.cmake.in  SkePUHelpers.cmake  skepu-options.cmake  skepu-tool-options.cmake  skepu-toolConfig.cmake.in
clang_precompiler/: CMakeLists.txt  call_cl.cpp  call_cu.cpp  code_gen.cpp  code_gen.h  data_structures.cpp  globals.h  map_cl.cpp  map_cu.cpp  mapoverlap_cl.cpp  mapoverlap_cu.cpp  mapreduce_cl.cpp  mapreduce_cu.cpp  reduce_cl.cpp  reduce_cu.cpp  scan_cl.cpp  scan_cu.cpp  skepu.cpp  visitor.cpp
cluster_tests/: .gitignore  Makefile  benchmark_1d_dotproduct.cpp  benchmark_mmmult.cpp  benchmark_nbody.cpp  benchmark_reduce.cpp  cluster_impl.cpp  common.hpp  main.cpp  map_vector.cpp  mapreduce_vector.cpp  reduce.cpp  soffa.hpp  starpu_matrix_container.cpp  vector.cpp
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  backendspec.cpp  call.cpp  cellular_automaton.cpp  cma.cpp  compile_all.sh  complex.cpp  conjugate_gradient.cpp  containers.cpp  coulombic.cpp  dotproduct.cpp  edgedetect.cpp  error  heat_diffusion.cpp  lambda.cpp  mandelbrot.cpp  map.cpp  map_in_place.cpp  mapoverlap-tuple.cpp  mapoverlap.cpp  mapoverlap_tuple.cpp  mappairs.cpp  mappairs_tuple.cpp  maprandom.cpp  mapreduce.cpp  maptuple.cpp  maxmin.cpp  median.cpp  miller_rabin.cpp  milli.hpp  mmmult.cpp  mmmult_row_col.cpp  montecarlo.cpp  mvmult-row.cpp  mvmult.cpp  mvmult_row.cpp  nbody.cpp  (+12 more)
examples/CMake/: example-options.cmake
include/: skepu2.hpp
include/skepu2/: call.hpp  map.hpp  mapoverlap.hpp  mapreduce.hpp  matrix.hpp  reduce.hpp  scan.hpp  sparse_matrix.hpp  vector.hpp
include/skepu2/backend/: bandwidthMeasure.h  benchmark.h  call.h  debug.h  device_allocations_cu.h  device_cl.h  device_cu.h  device_mem_pointer_cl.h  device_mem_pointer_cu.h  environment.h  globals.h  helper_methods.h  hybrid_tuner.h  malloc_allocator.h  map.h  mapoverlap.h  mapreduce.h  mem_pointer_base.h  reduce.h  reduce_helpers.h  scan.h  skeleton_base.h  skepu_cuda_helpers.h  skepu_opencl_helpers.h  tuner.h
include/skepu2/backend/impl/: device_allocations_cu.inl  environment.inl
include/skepu2/backend/impl/call/: call_cl.inl  call_cpu.inl  call_cu.inl  call_omp.inl
include/skepu2/backend/impl/map/: map_cl.inl  map_cpu.inl  map_cu.inl  map_hy.inl  map_omp.inl
include/skepu2/backend/impl/mapoverlap/: mapoverlap_cl.inl  mapoverlap_cpu.inl  mapoverlap_cu.inl  mapoverlap_hy.inl  mapoverlap_omp.inl
include/skepu2/backend/impl/mapreduce/: mapreduce_cl.inl  mapreduce_cpu.inl  mapreduce_cu.inl  mapreduce_hy.inl  mapreduce_omp.inl
include/skepu2/backend/impl/matrix/: matrix.inl  matrix_cl.inl  matrix_cu.inl  matrix_iterator.inl  matrix_proxy.inl  matrix_sequential.inl  matrix_transpose.inl
include/skepu2/backend/impl/reduce/: reduce_cl.inl  reduce_cpu.inl  reduce_cu.inl  reduce_hy.inl  reduce_omp.inl
include/skepu2/backend/impl/scan/: scan_cl.inl  scan_cpu.inl  scan_cu.inl  scan_hy.inl  scan_omp.inl
include/skepu2/backend/impl/sparse_matrix/: sparse_matrix.inl  sparse_matrix_cl.inl  sparse_matrix_cu.inl  sparse_matrix_iterator.inl
include/skepu2/backend/impl/vector/: vector.inl  vector_cl.inl  vector_cu.inl  vector_iterator.inl  vector_proxy.inl
include/skepu2/impl/: backend.hpp  common.hpp  execution_model.hpp  meta_helpers.hpp  timer.hpp
performance_tests/: cma.cpp  coulombic.cpp  dotproduct.cpp  gaussian.cpp  mandelbrot.cpp  mmmult.cpp  mvmult.cpp  nbody.cpp  performance_tests_common.hpp  ppmcc.cpp  psnr.cpp  run_performance_tests.sh  taylor.cpp
src/skepu-tool/: CMakeLists.txt  call_cl.cpp  call_cu.cpp  code_gen.cpp  code_gen.h  code_gen_cl.cpp  code_gen_cl.h  code_gen_cu.cpp  code_gen_cu.h  data_structures.cpp  data_structures.h  globals.h  map_cl.cpp  map_cu.cpp  mapoverlap_cl.cpp  mapoverlap_cu.cpp  mappairs_cl.cpp  mappairs_cu.cpp  mappairsreduce_cl.cpp  mappairsreduce_cu.cpp  mapreduce_cl.cpp  mapreduce_cu.cpp  reduce_cl.cpp  reduce_cu.cpp  scan_cl.cpp  scan_cu.cpp  skepu.cpp  visitor.cpp  visitor.h
tests/: CMakeLists.txt  autotune_test.cpp  map_test.cpp  mapoverlap_test.cpp  mapreduce_test.cpp  performance_map_test.cpp  performance_mapoverlap_test.cpp  performance_mapreduce_test.cpp  performance_reduce_test.cpp  performance_scan_test.cpp  reduce_test.cpp  run_test.sh  run_tests.sh  scan_test.cpp  tests_common.hpp
tests/backend/: CMakeLists.txt  backendspec.cpp  selection.cpp
tests/codegen/: CMakeLists.txt  builtins.cpp  included_uf.cpp  included_uf_header.h  lambda.cpp  linking-1.cpp  linking-2.cpp  namespace.cpp  objectoriented.cpp  proxies.cpp  usertype.cpp
tests/containers/: CMakeLists.txt  containers.cpp  flatmap.cpp  lifecycle.cpp
tests/map/: CMakeLists.txt  map.cpp  map_in_place.cpp  map_index.cpp  map_stride.cpp  map_tuple.cpp  mvmult.cpp
tests/mapoverlap/: CMakeLists.txt  mapoverlap.cpp  mapoverlap_1d.cpp  mapoverlap_2d.cpp  mapoverlap_3d.cpp  mapoverlap_4d.cpp  mapoverlap_in_place.cpp  mapoverlap_tuple.cpp  updatemode.cpp
tests/mappairs/: CMakeLists.txt  mappairs.cpp  mappairs_tuple.cpp
tests/mappairsreduce/: CMakeLists.txt  mappairsreduce.cpp  mpr_multi_return.cpp
tests/mapreduce/: CMakeLists.txt  mapreduce.cpp
tests/reduce/: CMakeLists.txt  orreduce.cpp  reduce.cpp  startval.cpp
tests/scan/: CMakeLists.txt  scan.cpp
tests/skepu_lib/: CMakeLists.txt  blas.cpp  complex.cpp  random.cpp  using_namespace.cpp
