if(SKEPU_CUDA)
	enable_language(CUDA)
endif()

add_subdirectory(backend)
add_subdirectory(codegen)
add_subdirectory(containers)
add_subdirectory(map)
add_subdirectory(mapoverlap)
add_subdirectory(mappairs)
add_subdirectory(mappairsreduce)
add_subdirectory(mapreduce)
add_subdirectory(reduce)
add_subdirectory(scan)
add_subdirectory(skepu_lib)
